# AdaptCast

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: drift.yaml  model.yaml  serving.yaml
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_drift_simulation.ipynb
src/dashboard/: app.py  data_loader.py
src/dashboard/components/: drift_gauge.py  forecast_chart.py  model_timeline.py
src/data/: download.py  preprocess.py  stream.py
src/drift/: detectors.py  monitor.py  retrainer.py
src/models/: baseline.py  online.py  registry.py
src/serving/: app.py  routes.py  schemas.py
tests/: test_api.py  test_baseline.py  test_detectors.py  test_preprocess.py  test_retrainer.py
